--- a/main.html
+++ b/main.html
@@ -1,16 +1,36 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Box Center</title>
+  <style>
+    body {
+      margin: 0;
+      height: 100vh;
+      display: flex;
+      justify-content: center;  /* Centers box horizontally */
+      align-items: center;      /* Centers box vertically */
+    }
+    .box {
+      width: 200px;
+      height: 200px;
+      background-color: lightblue;
+      border: 2px solid black;
+      display: flex; 
+      justify-content: center;  /* Centers text horizontally */
+      align-items: center;      /* Centers text vertically */
+      text-align: center;       /* Aligns multi-line text properly */
+    }
+    .text {
+      color: purple;
+      font-weight: bold;
+    }
+  </style>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+  <div class="box">
+    <div class="text">This is center.</div>
+  </div>
 </body>
-
 </html>
